<resources>
    <string name="app_name">Notes</string>

    <!-- LoginActivity -->
	<string name="action_sign_in">Sign in</string>
	<string name="error_field_required">This field is required</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_login_failed">Login failed</string>
	<string name="prompt_email">Email (IMAP only)</string>
	<string name="prompt_host">IMAP host</string>
	<string name="prompt_password">Password</string>
	<string name="prompt_port">IMAP port</string>
	<string name="prompt_starttls">STARTTLS</string>

	<!-- Login menu -->
	<string name="menu_help">Help</string>
	<string name="menu_settings">Configure email settings</string>

	<!--List menu -->
	<string name="menu_dollar">Donate</string>

	<!--List menu -->
	<string name="menu_bin">Delete</string>

	<!-- DonateActivity -->
	<string name="donate">Donate</string>

	<!-- NoteActivity -->
	<string name="editor_placeholder">Touch to edit</string>

</resources>
